task1/manifests/reporting-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reporting
  namespace: payments
spec:
  selector:
    app: reporting
  ports:
    - port: 80
      targetPort: 8080
